# mvst-coffee-challenge

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
backend/: Dockerfile  package-lock.json  package.json
backend/src/: app.module.ts  main.ts  seed.ts
backend/src/coffee/: coffee.controller.spec.ts  coffee.controller.ts  coffee.entity.ts  coffee.module.ts  coffee.service.spec.ts  coffee.service.ts
config/: default.yaml
frontend/: Dockerfile  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/components/: AddCoffeeForm.module.css  AddCoffeeForm.tsx  CoffeeCard.module.css  CoffeeCard.tsx  CoffeeGrid.module.css  CoffeeGrid.tsx  FilterTabs.module.css  FilterTabs.tsx  Footer.module.css  Footer.tsx  Header.module.css  Header.tsx  Hero.module.css  Hero.tsx  Modal.module.css  Modal.tsx  Toast.module.css  Toast.tsx
frontend/src/services/: api.ts
frontend/src/types/: Coffee.ts
src/funding_bot/: __init__.py  cli.py  config.py
src/funding_bot/backtest/: __init__.py  data.py  metrics.py  runner.py
src/funding_bot/exchanges/: __init__.py  binance.py
src/funding_bot/paper/: __init__.py  executor.py  persistence.py  runner.py
src/funding_bot/storage/: __init__.py  db.py
src/funding_bot/strategy/: __init__.py  decisions.py  engine.py  portfolio.py  scoring.py  sizing.py
tests/: test_backtest.py  test_config.py  test_engine.py  test_funding_snapshot.py  test_paper_executor.py  test_paper_persistence.py  test_paper_runner.py  test_portfolio.py  test_scoring.py  test_sizing.py  test_storage.py
(+2 files in other folders)
